--- a/src/app/Estudiante/estudianteevolucion/estudianteevoluciondialogeditar.component.html
+++ b/src/app/Estudiante/estudianteevolucion/estudianteevoluciondialogeditar.component.html
@@ -4,11 +4,7 @@
         <div class="col-sm-8">
             <div class="profile-info-name">Código : </div>
             <div class="profile-info-value"><span >{{evolucion.evlCodigo}}</span></div>
-        </div>
-        <div class="col-sm-4">
-            <div class="profile-info-name"></div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b></b></span></div>
-        </div>				
+        </div>			
     </div>
     <div class="row">
         <div class="col-sm-8">
@@ -41,7 +37,7 @@
     <div class="form-group row">
         <div class="col-sm-12 center">
             <button class="btn btn-primary" role="button" (click)='updateTemaEvolucionEstudiante()'>
-                <i class="fa fa-save"></i> GUARDAR Y ENVIAR
+                <i class="fa fa-save"></i> GUARDAR
             </button>
             <a class="btn btn-danger" (click)='closeDialog()'>
                 <i class="fa fa-reply"></i> CANCELAR
