--- a/src/app/Docente/docenteevolucion/docenteevoluciondesarrollo.component.html
+++ b/src/app/Docente/docenteevolucion/docenteevoluciondesarrollo.component.html
@@ -1,9 +1,9 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Evolución de Tema</h2>
 <div class="col-xs-12">
     <div class="row">
         <div class="col-sm-4">
             <div class="profile-info-name">Tipo :</div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreTipo}}</b></span></div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreTipoPorLista(tema.temIdTipo)}}</b></span></div>
         </div>				
     </div>
     <div class="row">
@@ -12,6 +12,15 @@
             <div class="profile-info-value"><span >{{tema.temNombre}}</span></div>
         </div>				
     </div>
+</div>
+<div style="clear: both;"></div>
+<div class="widget-header">
+    <button type="button" name="nuevo" (click)='openDialogCrear()' class="btn btn-primary btn-xs" title="Crear nueva cita">
+        <i class="fa fa-pencil-square-o"></i> Cita
+    </button>
+    <button type="button" name="reporteEvolucion" (click)='reporteEvolucion()' class="btn btn-primary btn-xs" title="Reporte de evolución">
+        <i class="fa fa-print"></i> Reporte
+    </button>
 </div>
 <div style="clear: both;"></div>
 <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
@@ -33,19 +42,19 @@
         <tr *ngFor="let item of tema.evoluciones; index as i">
             <td class="center" style="width: 30px;">{{i + 1}}</td>
             <td class="actions center" style="width: 100px">
-                <button type="button" name="editar" (click)='openDialog2(item)' title="Registro de desarrollo de cita" [className]="habilitaBotonEvolucionEstado(item.evlIdEstado) ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs disabled'">
+                <button type="button" name="editar" (click)='openDialogEditar(item)' title="Registro de desarrollo de cita" [className]="habilitaBotonEvolucionEstado(item.evlIdEstado) ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs disabled'">
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
-                <button type="button" name="detalle" (click)='openDialog(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
+                <button type="button" name="detalle" (click)='openDialogDetalle(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
                     <i class="fa fa-search"></i>
                 </button>
             </td>
             <td class="hide">{{item.idEvl}}</td>
             <td>{{item.evlCodigo}}</td>
-            <td>{{item.evlFechaCita}}</td>
+            <td>{{parseDateToString(item.evlFechaCita)}}</td>
             <td>{{item.evlHoracita}}</td>
             <td>{{item.evlPorcentaje}}</td>
-            <td>{{item.evlFechaValida}}</td>
+            <td>{{parseDateToString(item.evlFechaValida)}}</td>
             <td class="actions fixed-side center">
                 <input name="chk_evlValida_{{i}}" type="checkbox" [checked]="item.evlValida" disabled=true>                                                                   
             </td>
@@ -62,10 +71,124 @@
         </div>
     </div>
 
-<div id="dialog2">
+<div id="dialog">
     <div>
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+<div id="dialogEditar">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="profile-info-name">Código: </div>
+                    <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{evolucion.evlCodigo}}</b></span></div>
+                </div>	
+                <div class="col-sm-6">
+                    <div class="profile-info-name">Fecha cita</div>
+                    <div class="profile-info-value"><span >{{evolucion.evlFechaCita}}</span></div>
+                </div>			
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Estado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" [(ngModel)]="evolucion.evlIdestado">
+                            <option [value]="item.id" *ngFor="let item of listEstadoEvolucionAccion">{{item.titulo}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Duración [min]: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="120" step="5" [(ngModel)]="evolucion.evlTiempoDuracion" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">% de Avnace: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="100" step="1" [(ngModel)]="evolucion.evlPorcentaje" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div style="clear: both;"></div>
+            <!-- <h3 class="header blue">Estado</h3> -->
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Descrpcioón: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <textarea class="form-control" name="evlComentario" [(ngModel)]='evolucion.evlComentario' rows="6"></textarea>
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="evolucion.idEvl">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='updateTemaEvolucionEstudiante()'>
+                        <i class="fa fa-save"></i> GUARDAR Y ENVIAR
+                    </button>
+                </div>
+            </div>
+        </form>
+        
+    </div>
+</div>
+
+
+<div id="dialogCrear">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="profile-info-name">Código: </div>
+                    <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{evolucionNew.evlCodigo}}</b></span></div>
+                    <input type="hidden" value="" name="evlCodigo" [(ngModel)]="evolucionNew.evlCodigo">
+                </div>	
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha cita: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="evolucionNew.evlFechaCita | date:'yyyy-MM-dd'" (input)="evolucionNew.evlFechaCita = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Hora : </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="time" name="evlHoracita" min="09:00" max="18:00" [(ngModel)]="evolucionNew.evlHoracita">
+                    </span></div>
+                </div>
+            </div>
+            <div style="clear: both;"></div>
+            <!-- <h3 class="header blue">Estado</h3> -->
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Tareas: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <textarea class="form-control" name="evlTareas" [(ngModel)]='evolucionNew.evlTareas' rows="6"></textarea>
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="evolucionNew.idEvl">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='saveTemaEvolucion()'>
+                        <i class="fa fa-save"></i> GUARDAR
+                    </button>
+                </div>
+            </div>
+        </form>
+        
     </div>
 </div>
