--- a/src/app/Docente/docentehito/docentehitodesarrollo.component.html
+++ b/src/app/Docente/docentehito/docentehitodesarrollo.component.html
@@ -1,9 +1,9 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Hitos de proyecto</h2>
 <div class="col-xs-12">
     <div class="row">
         <div class="col-sm-4">
             <div class="profile-info-name">Tipo :</div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreTipo}}</b></span></div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreTipoPorLista(tema.temIdTipo)}}</b></span></div>
         </div>				
     </div>
     <div class="row">
@@ -12,6 +12,12 @@
             <div class="profile-info-value"><span >{{tema.temNombre}}</span></div>
         </div>				
     </div>
+</div>
+<div style="clear: both;"></div>
+<div class="widget-header">
+    <button type="button" name="reporteHito" (click)='reporteHito()' class="btn btn-primary btn-xs" title="Reporte de hitos">
+        <i class="fa fa-print"></i> Reporte
+    </button>
 </div>
 <div style="clear: both;"></div>
 <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
@@ -31,19 +37,21 @@
         <tr *ngFor="let item of tema.hitos; index as i">
             <td class="center" style="width: 30px;">{{i + 1}}</td>
             <td class="actions center" style="width: 100px">
-                <button type="button" name="editar" (click)='openDialog2(item)' title="Editar" [className]="item.hitValida ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs disabled'">
+                <button type="button" name="editar" (click)='openDialogEditar(item)' title="Validación de hito" [className]="habilitaBotonHitoEstadoEstudiante(item.hitIdEstado, item.hitValida) ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs disabled'">
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
-                <button type="button" name="detalle" (click)='openDialog(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
+                <button type="button" name="detalle" (click)='openDialogDetalle(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
                     <i class="fa fa-search"></i>
                 </button>
             </td>
             <td class="hide">{{item.idHit}}</td>
             <td>{{item.hitCodigo}}</td>
-            <td>{{item.hitFechaEntrega}}</td>
-            <td>{{item.hitFechavalida}}</td>
-            <td>{{item.hitValida}}</td>
-            <td>{{item.evlIdEstado}}</td>         
+            <td>{{parseDateToString(item.hitFechaEntrega)}}</td>
+            <td>{{parseDateToString(item.hitFechavalida)}}</td>
+            <td class="actions fixed-side center">
+                <input name="chk_evlValida_{{i}}" type="checkbox" [checked]="item.hitValida" disabled=true>                                                                   
+            </td>
+            <td>{{getNombreEstadoPorLista(item.hitIdEstado)}}</td>         
         </tr>
     </tbody>
 </table>
@@ -56,10 +64,62 @@
         </div>
     </div>
 
-<div id="dialog2">
+<div id="dialog">
     <div>
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+
+<div id="dialogEditar">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="profile-info-name">Código: </div>
+                    <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{hito.hitCodigo}}</b></span></div>
+                </div>	
+                <div class="col-sm-6">
+                    <div class="profile-info-name">Fecha entrega</div>
+                    <div class="profile-info-value"><span >{{parseDateToString(hito.hitFechaEntrega)}}</span></div>
+                </div>			
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Estado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" [(ngModel)]="hito.hitIdEstado">
+                            <option [value]="item.id" *ngFor="let item of listEstadoHitoAccion">{{item.titulo}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Descripción: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>{{hito.hitDescripcion}}</span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Comentario: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <textarea class="form-control" name="hitComentario" [(ngModel)]='hito.hitComentario' rows="6"></textarea>
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="hito.idHit">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='updateTemaHitoDocente()'>
+                        <i class="fa fa-save"></i> GUARDAR
+                    </button>
+                </div>
+            </div>
+        </form>
+        
     </div>
 </div>
