--- a/src/app/Docente/docentehito/docentehitodialog.component.html
+++ b/src/app/Docente/docentehito/docentehitodialog.component.html
@@ -1,1 +1,40 @@
-<p>docentehitodialog works!</p>
+<h2 class="header header-efx">Hito</h2>
+
+
+<div class="col-xs-12">
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="profile-info-name">Código : </div>
+            <div class="profile-info-value"><span >{{hito.hitCodigo}}</span></div>
+        </div>
+        <div class="col-sm-4">
+            <div class="profile-info-name">Estado : </div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreEstadoPorLista(hito.hitIdEstado)}}</b></span></div>
+        </div>				
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="profile-info-name">Fecha entrega</div>
+            <div class="profile-info-value"><span >{{parseDateToString(hito.hitFechaEntrega)}}</span></div>
+        </div>				
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="profile-info-name">Descripción</div>
+            <div class="profile-info-value"><span >{{hito.hitDescripcion}}</span></div>
+        </div>				
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="profile-info-name">Fecha validación</div>
+            <div class="profile-info-value"><span >{{parseDateToString(hito.hitFechavalida)}}</span></div>
+        </div>				
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="profile-info-name">Comentario</div>
+            <div class="profile-info-value"><span >{{hito.hitComentario}}</span></div>
+        </div>				
+    </div>
+    
+</div>
