--- a/src/app/Docente/docentetema/docentetemadetalle.component.html
+++ b/src/app/Docente/docentetema/docentetemadetalle.component.html
@@ -1,6 +1,3 @@
-<h2 class="header header-efx">{{titulo}}</h2>
-
-
 <div id="tabs_docentetema_detalle" class="tabbable">
     <ul class="nav nav-tabs">
         <li><a href="javascript:void(0)" (click)="showTab2('tab-tema')"><i class="fa fa-certificate"></i>&nbsp; Tema</a></li>
@@ -20,7 +17,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="profile-info-name">Estado</div>
-                            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreEstado}}</b></span></div>
+                            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreEstadoPorLista(tema.temIdEstado, tab)}}</b></span></div>
                         </div>				
                     </div>
                     <div class="row">
@@ -44,13 +41,13 @@
                     <div class="row">
                         <div class="col-sm-8">
                             <div class="profile-info-name">Fecha</div>
-                            <div class="profile-info-value"><span >{{tema.temFechaCreado}}</span></div>
+                            <div class="profile-info-value"><span >{{parseDateToString(tema.temFechaCreado)}}</span></div>
                         </div>				
                     </div>
                     <div class="row">
                         <div class="col-sm-8">
                             <div class="profile-info-name">Tipo Documento</div>
-                            <div class="profile-info-value"><span >{{tema.nombreTipo}}</span></div>
+                            <div class="profile-info-value"><span >{{getNombreTipoPorLista(tema.temIdTipo)}}</span></div>
                         </div>				
                     </div>
                     <div class="row">
@@ -81,7 +78,7 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="hide">{{item.idInf}}</td>
                             <td>{{item.infInforme}}</td>
-                            <td>{{item.infFecha}}</td>
+                            <td>{{parseDateToString(item.infFecha)}}</td>
                         </tr>
                     </tbody>
                 </table>                
@@ -108,10 +105,10 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="hide">{{item.idRsl}}</td>
                             <td>{{item.rslNumero}}</td>
-                            <td>{{item.rslFechaResolucion}}</td>
+                            <td>{{parseDateToString(item.rslFechaResolucion)}}</td>
                             <td>{{item.tipoResolucion.idTrsl}}</td>
-                            <td>{{item.rslFechaInicio}}</td>
-                            <td>{{item.rslFechaEntrega}}</td>
+                            <td>{{parseDateToString(item.rslFechaInicio)}}</td>
+                            <td>{{parseDateToString(item.rslFechaEntrega)}}</td>
                         </tr>
                     </tbody>
                 </table>
