--- a/src/app/Estudiante/estudianteevolucion/estudianteevoluciondesarrollo.component.html
+++ b/src/app/Estudiante/estudianteevolucion/estudianteevoluciondesarrollo.component.html
@@ -1,9 +1,9 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Evolución de Trabajo</h2>
 <div class="col-xs-12">
     <div class="row">
         <div class="col-sm-4">
             <div class="profile-info-name">Tipo :</div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreTipo}}</b></span></div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreTipoPorLista(tema.temIdTipo)}}</b></span></div>
         </div>				
     </div>
     <div class="row">
@@ -12,6 +12,12 @@
             <div class="profile-info-value"><span >{{tema.temNombre}}</span></div>
         </div>				
     </div>
+</div>
+<div style="clear: both;"></div>
+<div class="widget-header">
+    <button type="button" name="reporteEvolucion" (click)='reporteEvolucion()' class="btn btn-primary btn-xs" title="Reporte de evolución">
+        <i class="fa fa-print"></i> Reporte
+    </button>
 </div>
 <div style="clear: both;"></div>
 <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
@@ -33,18 +39,18 @@
         <tr *ngFor="let item of tema.evoluciones">
             <td class="center" style="width: 30px;"></td>
             <td class="actions center" style="width: 100px">
-                <button type="button" name="editar" (click)='openDialog2(item)' title="Editar" [className]="item.evlValida ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
+                <button type="button" name="editar" (click)='openDialogEditar(item)' title="Editar" [className]="item.evlValida ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
-                <button type="button" name="detalle" (click)='openDialog(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
+                <button type="button" name="detalle" (click)='openDialogDetalle(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
                     <i class="fa fa-search"></i>
                 </button>
             </td>
             <td class="hide">{{item.idEvl}}</td>
             <td>{{item.evlCodigo}}</td>
-            <td>{{item.evlFechaCita}}</td>
+            <td>{{parseDateToString(item.evlFechaCita)}}</td>
             <td>{{item.evlHoracita}}</td>
-            <td>{{item.evlFechaValida}}</td>
+            <td>{{parseDateToString(item.evlFechaValida)}}</td>
             <td class="actions fixed-side center">
                 <input name="chk_evlValida_{{i}}" type="checkbox" [checked]="item.evlValida" disabled=true>                                                                   
             </td>
@@ -62,10 +68,61 @@
         </div>
     </div>
 
-<div id="dialog2">
+<div id="dialog">
     <div>
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+<div id="dialogEditar">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="profile-info-name">Código : </div>
+                    <div class="profile-info-value"><span >{{evolucion.evlCodigo}}</span></div>
+                </div>			
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="profile-info-name">Fecha cita</div>
+                    <div class="profile-info-value"><span >{{parseDateToString(evolucion.evlFechaCita)}}</span></div>
+                </div>				
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="profile-info-name">Descripción</div>
+                    <div class="profile-info-value"><span >{{evolucion.evlDescripcion}}</span></div>
+                </div>				
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="profile-info-name">Tarea</div>
+                    <div class="profile-info-value"><span >{{evolucion.evlTareas}}</span></div>
+                </div>				
+            </div>
+            <div style="clear: both;"></div>
+            <!-- <h3 class="header blue">Estado</h3> -->
+            <div class="form-group row">
+                <label for="evlComentario" class="col-sm-2 col-form-label">Comentario</label>
+                <div class="col-sm-8">
+                    <textarea class="form-control" name="evlComentario" [(ngModel)]='evolucion.evlComentario' rows="6"></textarea>
+                </div>
+            </div>
+            <input type="hidden" value="" name="idEvl" [(ngModel)]="evolucion.idEvl">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='updateTemaEvolucionEstudiante()'>
+                        <i class="fa fa-save"></i> GUARDAR
+                    </button>
+                    <a class="btn btn-danger" (click)='closeDialog()'>
+                        <i class="fa fa-reply"></i> CANCELAR
+                    </a>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
