--- a/src/app/Estudiante/estudiantehito/estudiantehitodetalle.component.html
+++ b/src/app/Estudiante/estudiantehito/estudiantehitodetalle.component.html
@@ -1,4 +1,4 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Detalle</h2>
 
 
 <div id="tabs_evolucion_detalle" class="tabbable">
@@ -20,7 +20,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="profile-info-name">Estado</div>
-                            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreEstado}}</b></span></div>
+                            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreEstadoPorLista(tema.temIdEstado)}}</b></span></div>
                         </div>				
                     </div>
                     <div class="row">
@@ -44,13 +44,13 @@
                     <div class="row">
                         <div class="col-sm-8">
                             <div class="profile-info-name">Fecha</div>
-                            <div class="profile-info-value"><span >{{tema.temFechaEnviado}}</span></div>
+                            <div class="profile-info-value"><span >{{parseDateToString(tema.temFechaEnviado)}}</span></div>
                         </div>				
                     </div>
                     <div class="row">
                         <div class="col-sm-8">
                             <div class="profile-info-name">Tipo Documento</div>
-                            <div class="profile-info-value"><span >{{tema.nombreTipo}}</span></div>
+                            <div class="profile-info-value"><span >{{getNombreTipoPorLista(tema.temIdTipo)}}</span></div>
                         </div>				
                     </div>
                     <div class="row">
@@ -73,6 +73,7 @@
                             <th class="center" style="width: 30px;"></th>
                             <th class="center hide" style="width: 30px;">ID</th>
                             <th>Cédula</th>
+                            <th>Apellido</th>
                             <th>Nombre</th>
                             <th>Fecha</th>
                             <th>Estado</th>
@@ -84,8 +85,9 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="hide">{{item.idAsg}}</td>
                             <td>{{item.persona.perCedula}}</td>
+                            <td>{{item.persona.perApellido}}</td>
                             <td>{{item.persona.perNombre}}</td>
-                            <td>{{item.asgFechaRegistro}}</td>
+                            <td>{{parseDateToString(item.asgFechaRegistro)}}</td>
                             <td>{{getNombreEstadoAsignadoLector(item.asgIdEstadoTema)}}</td>
                             <td>{{getNombreTipoAsignado(item.asgIdTipo)}}</td>            
                         </tr>
@@ -120,10 +122,10 @@
                             </td>
                             <td class="hide">{{item.idRsl}}</td>
                             <td>{{item.rslNumero}}</td>
-                            <td>{{item.rslFechaResolucion}}</td>
-                            <td>{{item.tipoResolucion.idTrsl}}</td>
-                            <td>{{item.rslFechaInicio}}</td>
-                            <td>{{item.rslFechaEntrega}}</td>
+                            <td>{{parseDateToString(item.rslFechaResolucion)}}</td>
+                            <td>{{item.tipoResolucion.trslTitulo}}</td>
+                            <td>{{parseDateToString(item.rslFechaInicio)}}</td>
+                            <td>{{parseDateToString(item.rslFechaEntrega)}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -135,6 +137,9 @@
     <br>
     <div class="form-group row">
         <div class="col-sm-12 center">
+            <button class="btn btn-primary" role="button" (click)='reporteTema()' title="Imprimir reporte de tama">
+                <i class="fa fa-print"></i> REPORTE
+            </button>
             <a routerLink="/dashboard/estudiantehito" class="btn btn-danger">
                 <i class="fa fa-reply"></i> VOLVER
             </a>
