--- a/src/app/Estudiante/estudianteinscripcion/estudianteinscripcion.component.html
+++ b/src/app/Estudiante/estudianteinscripcion/estudianteinscripcion.component.html
@@ -1,6 +1,6 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Estudiante - Inscripción</h2>
 <div class="widget-header">
-    <button type="button" name="nuevo" (click)='openDialog()' title="Nuevo" [className]="habilitaBotonInscripcion ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs disabled'">
+    <button type="button" name="nuevo" (click)='openDialogCrear()' title="Nuevo" [className]="habilitaBotonInscripcion ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs'">
         <i class="fa fa-pencil-square-o"></i> NUEVO
     </button>
 </div>
@@ -26,11 +26,69 @@
     </tbody>
 </table>
 
-<div id="dialog">
+<!-- <div id="dialog">
     <div>
-        <!-- <app-ad-banner [ads]="ads"></app-ad-banner> -->
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div> -->
+
+
+<div id="dialogCrear">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <h4 class="header blue">Requisitos</h4>
+            <div class="form-group row">
+                <label for="nombre" class="col-sm-2 col-form-label">Opción de titulación</label>
+                <div class="col-sm-10">
+                    <select class="form-control" name="miselect" [(ngModel)]="presolicitud.pslIdOpcion">
+                        <option [value]="item.id" *ngFor="let item of listTipoOpcionTitulacion">{{item.nombre}}</option>
+                    </select>
+                </div>
+            </div>
+            <div style="clear: both;"></div>
+            <div class="col-sm-12">
+            <table class="table table-striped table-bordered tbl_chk font-small" style="width:100%; margin-bottom:0px;">
+                <thead class="thead-inverse">
+                    <tr>
+                        <th class="center" style="width: 30px;"></th>
+                        <th>Requisito</th>
+                        <th scope="col" class="fixed-side center">
+                            <input id="chk_all_row" class="chk_all_row" type="checkbox" value="">                                                                   
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of listCuestionario; index as i">
+                        <td class="center" style="width: 30px;">{{i + 1}}</td>
+                        <td>{{item.cuePregunta}}</td>
+                        <td class="actions fixed-side center">
+                            <input id="row_{{item.idCue}}" name="chk_row" type="checkbox" value="{{item.idCue}}" (change)="onChange(item.idCue, $event.target.checked)">                                                                   
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+            <div style="clear: both;"></div>
+            <h4 class="header blue">Estado</h4>
+            <div class="form-group row">
+                <label for="pslMensaje" class="col-sm-2 col-form-label">Mensaje</label>
+                <div class="col-sm-10">
+                    <span class="small red">Nota: Indicar su estado académico actual respecto a cursos, seminarios, etc. faltantes</span>
+                    <textarea class="form-control" name="pslMensaje" [(ngModel)]='presolicitud.pslMensaje' rows="6"></textarea>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="presolicitud.idPsl">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='create()'>
+                        <i class="fa fa-save"></i> GUARDAR Y ENVIAR
+                    </button>
+                </div>
+            </div>
+        </form>
+        
     </div>
 </div>
