--- a/src/app/Estudiante/estudiantetema/formestudiantetema.component.html
+++ b/src/app/Estudiante/estudiantetema/formestudiantetema.component.html
@@ -1,4 +1,4 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Tema</h2>
 
 
 <div class="col-xs-12">
@@ -9,7 +9,7 @@
         </div>
         <div class="col-sm-4">
             <div class="profile-info-name">Estado</div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreEstado}}</b></span></div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreEstadoPorLista(tema.temIdEstado)}}</b></span></div>
         </div>				
     </div>
     <div class="row">
@@ -33,13 +33,13 @@
     <div class="row">
         <div class="col-sm-8">
             <div class="profile-info-name">Fecha</div>
-            <div class="profile-info-value"><span >{{tema.temFechaEnviado}}</span></div>
+            <div class="profile-info-value"><span >{{parseDateToString(tema.temFechaEnviado)}}</span></div>
         </div>				
     </div>
     <div class="row">
         <div class="col-sm-8">
             <div class="profile-info-name">Tipo Documento</div>
-            <div class="profile-info-value"><span >{{tema.nombreTipo}}</span></div>
+            <div class="profile-info-value"><span >{{getNombreTipoPorLista(tema.temIdTipo)}}</span></div>
         </div>				
     </div>
     <div class="row">
