--- a/src/app/Utes/utesconsulta/utesconsulta.component.html
+++ b/src/app/Utes/utesconsulta/utesconsulta.component.html
@@ -1,4 +1,4 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Consultas</h2>
 
 
 <div id="tabs_docentetema" class="tabbable">
