--- a/src/app/Utes/asignacion/asignacion.component.html
+++ b/src/app/Utes/asignacion/asignacion.component.html
@@ -211,7 +211,7 @@
                             <td class="actions center" style="width: 100px">
                                 <button type="button" name="editar" (click)='asignarLector(item)'
                                     title="Asignar Revisor"
-                                    [className]="!habilitaBotonAddLectorPlan(item.temIdEstado) ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
+                                    [className]="item.temActivo ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
                                     <i class="fa fa-plus"></i>
                                 </button>
                                 <button type="button" name="detalle" (click)='loadDetalle(item)'
