--- a/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
@@ -552,7 +552,7 @@
             <br/>
             <div class="form-group row">
                 <div class="col-sm-12 center">
-                    <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!cuestionario.idCue else elseBlock">
+                    <button class="btn btn-primary" role="button" (click)='savePregunta()' *ngIf="!cuestionario.idCue else elseBlock">
                         <i class="fa fa-save"></i> CREAR
                     </button>
                     <ng-template #elseBlock>
