--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -171,7 +171,7 @@
             </li>
         </ul>
     </li>
-    <li class="hide">
+    <li class="">
         <a href="javascript:void(0);" class="dropdown-toggle">
             <i class="menu-icon fa fa-cogs"></i><span class="menu-text"> Configuraciones</span>
             <b class="arrow fa fa-angle-down"></b>
