--- a/src/app/Estudiante/estudianteinscripcion/estudianteinscripcion.component.html
+++ b/src/app/Estudiante/estudianteinscripcion/estudianteinscripcion.component.html
@@ -1,6 +1,6 @@
 <h2 class="header header-efx">Estudiante - Inscripción</h2>
 <div class="widget-header">
-    <button type="button" name="nuevo" (click)='openDialogCrear()' title="Nuevo" [className]="habilitaBotonInscripcion ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs'">
+    <button type="button" name="nuevo" id="btnnuevo" (click)='openDialogCrear()' title="Nuevo" [className]="habilitaBotonInscripcion ? 'btn btn-primary btn-xs' : 'btn btn-primary btn-xs'">
         <i class="fa fa-pencil-square-o"></i> NUEVO
     </button>
 </div>
