--- a/src/app/Utes/prerevisionexamen/prerevisionexamen.component.html
+++ b/src/app/Utes/prerevisionexamen/prerevisionexamen.component.html
@@ -109,11 +109,20 @@
             </div>
             <div class="col-sm-10">
                 <div class="profile-info-name" style="width: 155px;">Observación:</div>
-                <div class="profile-info-value" ><span>
-                    <textarea class="form-control" name="pslPrerevision" [(ngModel)]='presolicitud.pslPrerevision' rows="6"></textarea>
+                <div class="profile-info-value" style="width: 80%;"><span>
+                    <textarea class="form-control" name="pslPrerevision" [(ngModel)]='presolicitud.pslPrerevision' rows="6" style="width: 100%;"></textarea>
                 </span></div>
             </div>
 
+            <input type="hidden" value="" name="id" [(ngModel)]="presolicitud.idPsl">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='updateRespuestaRevisionExamen()'>
+                        <i class="fa fa-save"></i> GUARDAR
+                    </button>
+                </div>
+            </div>
         </form>
         
     </div>
