--- a/src/app/Utes/utesresolucion/utesresoluciondetalle.component.html
+++ b/src/app/Utes/utesresolucion/utesresoluciondetalle.component.html
@@ -136,8 +136,8 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="hide">{{item.idRsl}}</td>
                             <td>{{item.rslNumero}}</td>
+                            <td>{{item.rslObservacion}}</td>
                             <td>{{parseDateToString(item.rslFechaResolucion)}}</td>
-                            <td>{{item.tipoResolucion.idTrsl}}</td>
                             <td>{{parseDateToString(item.rslFechaInicio)}}</td>
                             <td>{{parseDateToString(item.rslFechaEntrega)}}</td>
                         </tr>
