--- a/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
@@ -264,10 +264,10 @@
             <br/>
             <div class="form-group row">
                 <div class="col-sm-12 center">
-                    <button class="btn btn-primary" role="button" (click)='createPeriodo()' *ngIf="!periodo.idPrd else elseBlock">
+                    <button class="btn btn-primary" role="button" (click)='createPeriodo()' *ngIf="!periodo.idPrd else elseBlock1">
                         <i class="fa fa-save"></i> CREAR
                     </button>
-                    <ng-template #elseBlock>
+                    <ng-template #elseBlock1>
                         <button class="btn btn-primary" role="button" (click)='updatePeriodo()'>
                             <i class="fa fa-save"></i> EDITAR
                         </button>
@@ -337,6 +337,7 @@
                 <thead class="thead-inverse">
                     <tr>
                         <th class="center" style="width: 30px;"></th>
+                        <th class="center" style="width: 60px;">Editar periodo</th>
                         <th>Cédula</th>
                         <th>Apellido</th>
                         <th>Nombre</th>
@@ -349,6 +350,11 @@
                 <tbody>
                     <tr *ngFor="let item of listSeleccion; index as i">
                         <td class="center" style="width: 30px;">{{i + 1}}</td>
+                        <td class="actions center">
+                            <button type="button" name="editar" (click)='dialogEditPeriodoDocenteHora(item)'  class="btn btn-primary btn-xs" title="Modificar registro">
+                                <i class="fa fa-pencil-square-o"></i>
+                            </button>
+                        </td>
                         <td>{{item.persona.perCedula}}</td>
                         <td>{{item.persona.perApellido}}</td>
                         <td>{{item.persona.perNombre}}</td>
@@ -366,6 +372,45 @@
     </div>
 </div>
 
+<div id="dialogEditPeriodoDocenteHora">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Horas asignadas: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="20" step="1" [(ngModel)]="enperiodoselect.selHoraAsignada" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Horas vigentes: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="20" step="1" [(ngModel)]="enperiodoselect.selHoraVigente" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Horas lectura: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="20" step="1" [(ngModel)]="enperiodoselect.selHoraLectura" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="enperiodoselect.idSel">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='update()'>
+                        <i class="fa fa-save"></i> GUARDAR
+                    </button>
+                </div>
+            </div>
+        </form>        
+    </div>
+</div>
 
 <div id="dialogConvocatoria">
     <div class="dialog-content" style="display: none;">
@@ -425,10 +470,10 @@
             <br/>
             <div class="form-group row">
                 <div class="col-sm-12 center">
-                    <button class="btn btn-primary" role="button" (click)='saveConvocatoria()' *ngIf="!convocatoria.idCon else elseBlock">
+                    <button class="btn btn-primary" role="button" (click)='saveConvocatoria()' *ngIf="!convocatoria.idCon else elseBlock5">
                         <i class="fa fa-save"></i> CREAR
                     </button>
-                    <ng-template #elseBlock>
+                    <ng-template #elseBlock5>
                         <button class="btn btn-primary" role="button" (click)='update()'>
                             <i class="fa fa-save"></i> EDITAR
                         </button>
@@ -494,10 +539,10 @@
             <div class="form-group row">
                 <div class="col-sm-12 center">
                     <button class="btn btn-primary" role="button" (click)='createInscripcion()'
-                        *ngIf="!inscripcion.idIns else elseBlock">
+                        *ngIf="!inscripcion.idIns else elseBlock3">
                         <i class="fa fa-save"></i> CREAR
                     </button>
-                    <ng-template #elseBlock>
+                    <ng-template #elseBlock3>
                         <button class="btn btn-primary" role="button" (click)='update()'>
                             <i class="fa fa-save"></i> EDITAR
                         </button>
@@ -552,10 +597,10 @@
             <br/>
             <div class="form-group row">
                 <div class="col-sm-12 center">
-                    <button class="btn btn-primary" role="button" (click)='savePregunta()' *ngIf="!cuestionario.idCue else elseBlock">
+                    <button class="btn btn-primary" role="button" (click)='savePregunta()' *ngIf="!cuestionario.idCue else elseBlock4">
                         <i class="fa fa-save"></i> CREAR
                     </button>
-                    <ng-template #elseBlock>
+                    <ng-template #elseBlock4>
                         <button class="btn btn-primary" role="button" (click)='update()'>
                             <i class="fa fa-save"></i> EDITAR
                         </button>
